--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Service Worker</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <h1>This page is for testing the service worker</h1>
     <p>The following picture will be cached for your next visit.</p>
-    <img src='' alt='There should be a picture' />
+    <img src='https://www.telegraph.co.uk/content/dam/Travel/Destinations/Europe/France/Nice/Nice%2C%20france-xlarge.jpg' alt='There should be a picture' />
 
     <script src="js/app.js"></script>
 </body>
