--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>This page is for testing the service worker</h1>
     <p>The following picture will be cached for your next visit.</p>
 		<div>
-			<img src='https://www.telegraph.co.uk/content/dam/Travel/Destinations/Europe/France/Nice/Nice%2C%20france-xlarge.jpg' alt='There should be a picture' />
+			<img src='https://www.telegraph.co.uk/content/dam/Travel/Destinations/Europe/France/Nice/Nice%2C%20france-xlarge.jpg' alt='There should be a picture' width="100%" />
 		</div>
 
     <script src="js/app.js"></script>
