changes stylesheet name

--- a/push-messages/index.html
+++ b/push-messages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 	<title>Service Worker - Push Messages</title>
-<link rel="stylesheet" href="styles/index.css">
+<link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
