changed button class

--- a/push-messages/index.html
+++ b/push-messages/index.html
@@ -11,7 +11,7 @@
 	<p>This application was built to show you how the service worker sends push messages.</p>
 	<p>click the following button, to subscribe the user and be able to send a push message.</p>
 	<p>
-		<button disabled class="pushbutton">
+		<button disabled class="btn">
 			Enable Push Messaging
 		</button>
 	</p
